challenge #30056080 PREFLIGHT CHECKLIST
